# skilldigest

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROUND_LOG.md
.github/workflows/: ci.yml
benches/: bench_scan.rs  bench_tokenize.rs
fixtures/broken/: README.md
fixtures/broken/dead/: SKILL.md
fixtures/broken/good/: SKILL.md
fixtures/broken/stale/: SKILL.md
fixtures/conflict/: README.md
fixtures/conflict/policy-a/: SKILL.md
fixtures/conflict/policy-b/: SKILL.md
fixtures/tiny/: README.md
fixtures/tiny/alpha/: SKILL.md
fixtures/tiny/beta/: SKILL.md
fixtures/tiny/gamma/: SKILL.md
src/: audit.rs  cli.rs  config.rs  error.rs  graph.rs  lib.rs  loadout.rs  main.rs  model.rs  parse.rs  rules.rs  scan.rs  tokenize.rs
src/output/: dot.rs  json.rs  markdown.rs  mod.rs  sarif.rs  text.rs
tests/: cli_graph.rs  cli_loadout.rs  cli_scan.rs  cli_tokens.rs  cycle_z_probe.rs  eval_regressions.rs  integration.rs  sarif_schema.rs
